Fix alignment in CarteEtat

--- a/components/carte-etat/bar-chart.scss
+++ b/components/carte-etat/bar-chart.scss
@@ -20,9 +20,6 @@
   .title-wrapper{
     display: flex;
   }
-  .montant-impots{
-    padding: 0px;
-  }
 
   .nobreak {
     overflow: hidden;
